    ** VALUES tranformer lost derived type.

changes in sbcl-0.8.8 relative to sbcl-0.8.7:
  * bug fix: DECODE-UNIVERSAL-TIME now accepts timezone arguments with
    second-resolution: integer multiples of 1/3600 between -24 and 24.
    (thanks to Vincent Arkesteijn)
  * optimization: implemented multiplication as a modular
    (UNSIGNED-BYTE 32) operation on the x86 backend.
  * optimization: SEARCH on simple-base-strings can now be open-coded.
    (see also contrib/compiler-extras.lisp for inspiration for
    teaching the compiler about the Boyer-Moore algorithm).
  * bug fix: functions =, /=, <, <=, >, >= did not check the argument
    type when called with 1 argument; PEEK-CHAR checked type of
    PEEK-TYPE only after having read first character from a
    stream. (reported by Peter Graves)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** in stack analysis liveness information is propagated from
       non-local entry points.
    ** pathwise CAST removing failed when the CAST node did not start
       a block.
    ** INPUT-STREAM-P, OUTPUT-STREAM-P, STREAM-ELEMENT-TYPE and
       OPEN-STREAM-P signal a TYPE-ERROR if their argument is not a
       stream.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.